# wp1.7-scheduler-tests

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  NOTES.md  README.md  todo.txt
Debug/: CPackConfig.cmake  CPackSourceConfig.cmake
Debug/.cmake/api/v1/reply/: codemodel-v2-38106db6da59c1475e8c.json  codemodel-v2-eec3068593d72b97bc0f.json  directory-_deps.acts-build-Debug-aad9f978de6d3938a505.json  directory-_deps.acts-build.Core-Debug-d27b79366ab5d83e0062.json  directory-_deps.acts-build.Core.src.AmbiguityResolution-Debug-b284a81b6b0771236092.json  directory-_deps.acts-build.Core.src.Definitions-Debug-0a64f778e6aca9387a13.json  directory-_deps.acts-build.Core.src.Detector-Debug-4221fd5fcee34a714b7b.json  directory-_deps.acts-build.Core.src.Digitization-Debug-3823eaa28f781b5484b0.json  directory-_deps.acts-build.Core.src.EventData-Debug-2ff8dd8173d77106128d.json  directory-_deps.acts-build.Core.src.Geometry-Debug-07ab3f2b266e8649eb26.json  directory-_deps.acts-build.Core.src.MagneticField-Debug-920862b41daae0ca9f80.json  directory-_deps.acts-build.Core.src.Material-Debug-a4439f3c8de38bb92f71.json  directory-_deps.acts-build.Core.src.Propagator-Debug-071c5b4acc2bc49b0615.json  directory-_deps.acts-build.Core.src.Surfaces-Debug-930c1d4ef6c2496b27d2.json  directory-_deps.acts-build.Core.src.TrackFinding-Debug-619cfead8ad3589d0cea.json  directory-_deps.acts-build.Core.src.TrackFitting-Debug-996638cf13b337aa9369.json  directory-_deps.acts-build.Core.src.Utilities-Debug-27eb5a44fbe5e60cc7ae.json  directory-_deps.acts-build.Core.src.Vertexing-Debug-6f582de7bfdd7d361953.json  directory-_deps.acts-build.Core.src.Visualization-Debug-6fff91e1a5f05323c720.json  directory-_deps.acts-build.Plugins-Debug-2c248f80b6f17edfb29a.json  directory-_deps.acts-build.Plugins.Json-Debug-7a42b4e89818d63537e7.json  directory-_deps.acts-build.thirdparty.nlohmann_json-Debug-e3bece5852ab0e1fd459.json  directory-_deps.algebraplugins-build-Debug-61c2aa9eda7158c0c977.json  directory-_deps.algebraplugins-build.common-Debug-b54cdfd7bb4528bd6280.json  directory-_deps.algebraplugins-build.extern.vc-Debug-66f9eb68b877d527e646.json  directory-_deps.algebraplugins-build.frontend-Debug-bad6f4abdc840da38bb9.json  directory-_deps.algebraplugins-build.frontend.array_cmath-Debug-577930c7aca4c71db40b.json  directory-_deps.algebraplugins-build.frontend.eigen_cmath-Debug-690a65a507c51ef745cc.json  directory-_deps.algebraplugins-build.frontend.eigen_eigen-Debug-e6009e945d1d2ba19fe1.json  directory-_deps.algebraplugins-build.frontend.vc_cmath-Debug-25b24403a95ef2e2897b.json  directory-_deps.algebraplugins-build.frontend.vc_soa-Debug-09cd5541812d3fee4095.json  directory-_deps.algebraplugins-build.frontend.vc_vc-Debug-8b1d4cc46b6e117f9f10.json  directory-_deps.algebraplugins-build.frontend.vecmem_cmath-Debug-ed32a40bc8c32b010631.json  directory-_deps.algebraplugins-build.math-Debug-909bc12f5a052b58c7b4.json  directory-_deps.algebraplugins-build.math.cmath-Debug-d55fe685804c21c6eb22.json  directory-_deps.algebraplugins-build.math.common-Debug-83e47082a9e207080f74.json  directory-_deps.algebraplugins-build.math.eigen-Debug-86b715cbb1072b6b5e6a.json  directory-_deps.algebraplugins-build.math.vc-Debug-d2ee1fd68b4f5c864d36.json  directory-_deps.algebraplugins-build.math.vc_soa-Debug-e8ccbcf9bf1fa50019d8.json  directory-_deps.algebraplugins-build.storage-Debug-07e7592b68130f7b7b50.json  (+138 more)
Debug/gnu_13.2_cxx20_64_debug/: libtbb_debug.so.12  libtbbmalloc_debug.so.2.13  libtbbmalloc_proxy_debug.so.2.13
Debug/lib/: libbenchmark_main.so.1  libbenchmark_main.so.1.8.3  libtraccc_core.so.0  libtraccc_device_common.so.0  libtraccc_device_common.so.0.17.0  libtraccc_io.so.0  libvecmem_core.so.1  libvecmem_core.so.1.10.0  libvecmem_cuda.so.1  libvecmem_cuda.so.1.10.0
build_debug/: CPackConfig.cmake  CPackSourceConfig.cmake
build_debug/gnu_13.2_cxx20_64_debug/: libtbbmalloc_debug.so.2.13  libtbbmalloc_proxy_debug.so.2  libtbbmalloc_proxy_debug.so.2.13
build_debug/gnu_13.3_cxx20_64_debug/: libtbbmalloc_debug.so.2  libtbbmalloc_debug.so.2.13  libtbbmalloc_proxy_debug.so.2.13
build_debug/lib/: libbenchmark.so.1  libbenchmark_main.so.1.8.3  libtraccc_cuda.so.0  libtraccc_device_common.so.0.17.0  libtraccc_performance.so.0  libvecmem_core.so.1.10.0  libvecmem_cuda.so.1.10.0
cmake/: FindPatatrack.cmake
components/: CMakeLists.txt
components/simple/: CMakeLists.txt  CudaKernels.cu  CudaKernels.cuh  FirstAlgorithm.cpp  FirstAlgorithm.hpp  SecondAlgorithm.cpp  SecondAlgorithm.hpp  ThirdAlgorithm.cpp  ThirdAlgorithm.hpp
components/traccc/: CMakeLists.txt  TracccAlgorithm.cpp  TracccAlgorithm.hpp  TracccAlgs.cpp  TracccCudaAlgorithm.cpp
src/: AlgExecState.hpp  AlgorithmBase.cpp  AlgorithmBase.hpp  AlgorithmDependencyMap.cpp  Assert.hpp  AssertCuda.cuh  CUDAMutex.hpp  CUDAThread.hpp  CUDAThreadLocalContext.hpp  CUDAThreadLocalStream.hpp  CachingGraphContainer.hpp  Coroutines.hpp  CudaAssert.cuh  CudaKernels.cu  CudaKernels.cuh  EventContentManager.cpp  EventContentManager.hpp  EventContext.cpp  EventContext.hpp  EventStore.hpp  FirstAlgorithm.cpp  FirstAlgorithm.hpp  MemberFunctionName.hpp  Scheduler.cpp  Scheduler.hpp  SecondAlgorithm.cpp  SecondAlgorithm.hpp  StatusCode.hpp  ThirdAlgorithm.cpp  ThirdAlgorithm.hpp  TracccAlgorithm.cpp  TracccAlgorithm.hpp  TracccAlgs.hpp  TracccCudaAlgorithm.cpp  TracccCudaAlgorithm.hpp  main.cpp
test/: TestEventStore.cpp
tests/: CMakeLists.txt  CUDAGraphs.cu  MockAlgorithm.hpp  NVTXUtils.hpp  Performance.ipynb  TestEventStore.cpp  TestScheduler.cpp  TestTBBTaskSuspension.cpp  extract_suppressions.py  helgrind.suppr
